# WallpaperManager

./: Cargo.toml  Makefile  README.md  default.nix  flake.nix
nix/: hm-module.nix  package.nix
src/: main.rs
src/manager/: main.rs
src/runner/: main.rs
wallpaper-ctl/: Cargo.toml  default.nix
wallpaper-ctl/src/: main.rs
wallpaper-engine/: Cargo.toml  default.nix
wallpaper-engine/src/: main.rs
wallpaper-manager/: Cargo.toml  default.nix
wallpaper-manager/src/: common.rs  main.rs
wallpaper_common/: Cargo.toml
wallpaper_common/src/: lib.rs  wallpaper.rs
wallpaper_ctl/: Cargo.toml
wallpaper_ctl/src/: main.rs
wallpaper_engine/: Cargo.toml
wallpaper_engine/src/: extra.rs  main.rs
wallpaper_manager/: Cargo.toml
wallpaper_manager/src/: common.rs  main.rs
