[package]
name = "wallpaper-engine-collective"
version = "0.1.1"
edition = "2021"


[[bin]]
name = "wallpaper-engine"
path = "wallpaper-engine/src/main.rs"

[[bin]]
name = "wallpaper-ctl"
path = "wallpaper-ctl/src/main.rs"

[[bin]]
name = "wallpaper-manager"
path = "wallpaper-manager/src/main.rs"

[workspace]
resolver = "3"
members = ["wallpaper-engine", "wallpaper-ctl", "wallpaper-manager"]