[package]
name = "wallpaper-manager"
version = "0.1.1"
edition = "2021"

[dependencies]
wallpaper_common = { path = "../wallpaper_common" }
display-info = "0.5.7"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["default", "file", "image", "gif"] }
image = { version = "0.25.9", features = ["jpeg", "png", "bmp"] }
env_logger = "0.11.8"
serde = "1.0.228"
serde_json = "1.0.149"