[package]
name = "wallpaper_engine"
version = "0.1.1"
edition = "2021"

[dependencies]
wallpaper_common = { path = "../wallpaper_common" }
cairo-rs = {version = "0.22.0", features = ["png"]}
png = "0.18.1"
glutin = "0.32.3"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.13"
image = {version = "0.25.9", features = ["bmp"]}
#ffmpeg-next = "8.0.0"